--- a/ARBOLES/HTML/introduccion.html
+++ b/ARBOLES/HTML/introduccion.html
@@ -11,7 +11,7 @@
     </header>
     <nav>
             <a href="index.html">Inicio</a></li>
-            <a href="#">Tipos de árboles</a></li>
+            <a href="Tipos de arboles.html">Tipos de árboles</a></li>
             <a href="#">Galeria</a></li>
     </nav>
 </body>
